environments/gloo-mesh-core/singlecluster/istio-config/base/argocd-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-vs
  namespace: argocd
spec:
  hosts:
    - "*"
  gateways:
    - istio-gateways/https-gateway
  http:
    - name: argo-ui
      match:
        - uri:
            prefix: /argo
      route:
        - destination:
            host: argocd-server
            port:
              number: 443
