environments/gloo-mesh-core/singlecluster/istio-config/base/gmui-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  annotations:
    cluster.solo.io/cluster: mgmt
  name: gmui-vs
  namespace: gloo-mesh
spec:
  gateways:
    - istio-gateways/https-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /
      name: gmui-main
      route:
        - destination:
            host: gloo-mesh-ui.gloo-mesh.svc.cluster.local
            port:
              number: 8090
